﻿Changelog
══════════════════════════════════════════════
TamrielCraftPack
Jan 7, 2024
v1.20-2

SOUND
- Add patch to extend octave range of NoteBlocks created by koca2000 and ishland via NoteBlockAPI
	REQUIRES SERVER PATCH TO WORK

══════════════════════════════════════════════
TamrielCraftPack
Jan 6, 2024
v1.20
	
Move to stable release.

Changes from last stable release:

BLOCKSTATES
- Remove unnessary duplicate blockstates
- Update seasgress.json (seagrass -> seagrass_tall)

LANG
- Added en_gb lang file with custom entries

MISC
- Added Custom Splashes
- Added Custom Title

MODELS
- Removed unnessary cobblestone_wall_side and mossy_cobblestone_wall_side models
- Updated item_frame model to reduce size to 2x2 and translate down into blocks. Should not break anything but should be invisible to an extent.

PACK
- Update pack.mcmeta
- Update ExtraBlocks
- Update pack.png
- Added pack.png resources to repo
- Updated to Excalibur base to 1.20

OPTIFINE
- Remove new Prismarine CTM

SHADERS
- Added rendertype_entity_solid.fsh [MC-164001] Transparent Textures Fix (mc1.17+) via https://www.planetminecraft.com/texture-pack/mc-164001-transparent-textures-bug-fix-see-through-paintings-beds-amp-shields/

SOUND
	> We got permission to add music by young scrolls and All in All.
- Replaced mall.ogg (C418 - mall) with "Dagothwave by Dagoth Ur" by young scrolls
- Replace 13.ogg (C418 - 13) with "Luther Broad Motel" by young scrolls
- Replace far.ogg (C418 - far) with "MIRAAK - TRUE POWER" by young scrolls
- Replace relic.ogg (Aaron Cherof - Relic) with "Balmora Vice" by young scrolls
- Replace ward.ogg (C418 - ward) with "Running In Circles by Runs-In-Circles" by young scrolls
- Replace blocks.ogg (C418 - blocks) with a semi-custom TES Surf Album by All in All
	Contains - "The Wave Most Surfed", "Nerevar Rising-Call of Magic (Surf Version)", and "Dragonborn Surfs".
- Replace wait.ogg (C418 - wait) with PELINAL by All in All