@@ -1,0 +1,46 @@
+{
+	"textures": {
+		"0": "block/stonebrick_wall_top",
+		"1": "block/stonebrick_wall_side",
+		"3": "block/cobble_wall_top",
+		"particle": "block/stone_bricks"
+	},
+	"elements": [
+		{
+			"name": "wall",
+			"from": [6, 0, 0],
+			"to": [10, 14, 2],
+			"faces": {
+				"north": {"uv": [6, 2, 10, 16], "texture": "#1"},
+				"east": {"uv": [0, 2, 2, 16], "texture": "#1"},
+				"south": {"uv": [12, 2, 16, 16], "texture": "#1"},
+				"west": {"uv": [2, 2, 4, 16], "texture": "#1"},
+				"down": {"uv": [6, 7, 10, 9], "texture": "#3", "cullface": "down"}
+			}
+		},
+		{
+			"from": [6, 0, 6],
+			"to": [10, 12, 10],
+			"faces": {
+				"north": {"uv": [6, 4, 10, 16], "texture": "#1"},
+				"east": {"uv": [12, 4, 16, 16], "texture": "#1"},
+				"south": {"uv": [12, 4, 16, 16], "texture": "#1"},
+				"west": {"uv": [12, 4, 16, 16], "texture": "#1"},
+				"up": {"uv": [6, 6, 10, 10], "texture": "#1"},
+				"down": {"uv": [6, 6, 10, 10], "texture": "#3"}
+			}
+		},
+		{
+			"from": [5, 12, 0],
+			"to": [11, 15, 8],
+			"faces": {
+				"north": {"uv": [5, 1, 11, 4.05], "texture": "#1"},
+				"east": {"uv": [8, 1, 16, 4], "texture": "#1"},
+				"south": {"uv": [5, 1, 11, 4], "texture": "#1"},
+				"west": {"uv": [0, 1, 8, 4], "texture": "#1"},
+				"up": {"uv": [5, 0, 11, 8], "texture": "#0"},
+				"down": {"uv": [5, 0, 11, 8], "texture": "#0"}
+			}
+		}
+	]
+}
