@@ -1,0 +1,20 @@
+{
+	"textures": {
+		"top": "block/cobble_wall_top",
+		"particle": "block/stonebrick6",
+		"wall": "block/stonebrick6"
+	},
+	"elements": [
+		{
+			"from": [5, 0.01, 0],
+			"to": [11, 16.01, 8],
+			"faces": {
+				"north": {"uv": [5, 0, 11, 16], "texture": "#wall", "cullface": "north"},
+				"east": {"uv": [8, 0, 16, 16], "texture": "#wall"},
+				"west": {"uv": [0, 0, 8, 16], "texture": "#wall"},
+				"up": {"uv": [5, 0, 11, 8], "texture": "#top"},
+				"down": {"uv": [5, 8, 11, 16], "texture": "#wall", "cullface": "down"}
+			}
+		}
+	]
+}
