@@ -1,0 +1,34 @@
+{
+	"parent": "block/block",
+	"ambientocclusion": false,
+	"texture_size": [64, 64],
+	"textures": {
+		"particle": "#shulker"
+	},
+	"elements": [
+		{
+			"from": [0, 4, 0],
+			"to": [16, 16, 16],
+			"faces": {
+				"north": {"uv": [4, 4, 8, 7], "texture": "#shulker", "cullface": "north"},
+				"east": {"uv": [0, 4, 4, 7], "texture": "#shulker", "cullface": "east"},
+				"south": {"uv": [12, 4, 16, 7], "texture": "#shulker", "cullface": "south"},
+				"west": {"uv": [8, 4, 12, 7], "texture": "#shulker", "cullface": "west"},
+				"up": {"uv": [4, 0, 8, 4], "texture": "#shulker", "cullface": "up"},
+				"down": {"uv": [8, 0, 12, 4], "texture": "#shulker"}
+			}
+		},
+		{
+			"from": [15.95, 4, 0.05],
+			"to": [0.05, 15.95, 15.95],
+			"faces": {
+				"north": {"uv": [8, 4, 4, 7], "texture": "#shulker", "cullface": "north"},
+				"east": {"uv": [4, 4, 0, 7], "texture": "#shulker", "cullface": "east"},
+				"south": {"uv": [16, 4, 12, 7], "texture": "#shulker", "cullface": "south"},
+				"west": {"uv": [12, 4, 8, 7], "texture": "#shulker", "cullface": "west"},
+				"up": {"uv": [4, 0, 8, 4], "texture": "#shulker", "cullface": "up"},
+				"down": {"uv": [8, 0, 12, 4], "texture": "#shulker"}
+			}
+		}
+	]
+}
